AddProduct page gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ footer {
 
 .mainBackground {
   background: rgb(4, 47, 78);
+  height: 100vh;
 }
 .mainColor {
   color: rgba(255, 255, 255, 0.87);
@@ -804,7 +805,7 @@ footer {
   }
 
   .mainBackground {
-    height: 170vh;
+    height: 180vh;
   }
   .sellWrapper {
     height: 180vh;
